[project]
name = "pyalign"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = []

[dependency-groups]
dev = ["nodejs-wheel-binaries>=24.14.0", "numpy>=2.4.2", "pyright>=1.1.408", "pytest>=9.0.2", "ruff>=0.15.4"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "TC004", "ANN001", "INP001"]

[tool.pyright]
stubPath = "typings"
typeCheckingMode = "strict"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUntypedFunctionDecorator = false
reportMissingTypeStubs = false
reportMissingModuleSource = false

[tool.pytest.ini_options]
pythonpath = ["."]
