[project]
name = "pyalign"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14.6"
dependencies = []

[dependency-groups]
dev = ["nodejs-wheel-binaries>=24.16.0", "numpy>=2.5.0", "pyright>=1.1.410", "pytest>=9.1.1", "ruff>=0.15.18"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "TC004", "ANN001", "INP001"]

[tool.pyright]
stubPath = "typings"
typeCheckingMode = "strict"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUntypedFunctionDecorator = false
reportMissingTypeStubs = false
reportMissingModuleSource = false

[tool.pytest.ini_options]
pythonpath = ["."]
